# modulo8_ponderados

./: .gitignore
ponderada2/: README.md
ponderada2/navigation/: run.sh
ponderada2/navigation/install/: local_setup.sh  setup.sh
ponderada2/navigation/log/: latest_build
ponderada2/navigation/src/nav_pkg/: setup.py
ponderada2/navigation/src/nav_pkg/launch/: my-map.pgm  my-map.yaml  nav_launch.py
ponderada2/workspace/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ponderada2/workspace/log/: latest_build
ponderada2/workspace/src/map/: map.pgm  mapear_e_salvar.sh  package.xml  setup.cfg  setup.py
ponderada2/workspace/src/map/launch/: map_launch.py
ponderada2/workspace/src/navigation/: package.xml  setup.cfg  setup.py
ponderada3/: .gitignore  README.md  aula.py
ponderada3/chatbot/: CMakeLists.txt
ponderada3/chatbot-teste-aula/: package.xml
ponderada3/chatbot-teste-aula/chatbot/: CMakeLists.txt  package.xml
ponderada3/chatbot-teste-aula/chatbot/scripts/: chatbot_node.py
ponderada3/chatbot-teste-aula/src/chat/: chat.cpp
ponderada3/chatbot/src/: main.cpp
ponderada3/chatbot/src/chat/: chat.cpp  chat.h
ponderada4/: README.md
ponderada4/chat/: package.xml
ponderada4/chat/chat/: input.py  llm.py  output.py  requirements.txt
ponderada5/: README.md  ponderada5.webm
ponderada5/chat/: setup.py
ponderada5/chat/chat/: llm.py
ponderada7/: README.md  ponderada7.ipynb
ponderada8/: README.md  main.py
ponderada9/: README.md
semana2/aula2/: notas.md  script.py
(+15 files in other folders)
